--- a/contacts/views/index.pug
+++ b/contacts/views/index.pug
@@ -26,7 +26,7 @@ block content
                   td= contact.email
           else
             form(action="/seed", method="POST")
-                button(type="submit").btn.btn-primary Seed Data
+                button(type="submit").btn.btn-primary Seed Data2
             br
             br
             tr
